update checkstyle config and correct checkstyle warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         ], // arguments before --wait (-v is useful for debugging)
     },
     "[haxe]": {
+        "editor.formatOnSave": true,
         "editor.tabSize": 4,
     },
 }
